--- a/nuzlocke.r/frontend/app/components/game/game.component.html
+++ b/nuzlocke.r/frontend/app/components/game/game.component.html
@@ -196,7 +196,7 @@
 
               <!-- Boss Encounter After Route 103 -->
               @if (i === 2) {
-                <div class="boss-row" *ngFor="let boss of bosses().slice(0, 1)">
+                <div class="boss-row" *ngFor="let boss of bosses().slice(0, 1)" [style.background]="getBossGradient(boss)">
                   <div class="boss-info">
                     <div class="boss-trainer">
                       <div class="trainer-sprite">
@@ -230,7 +230,7 @@
 
               <!-- Boss Encounter After Route 110 -->
               @if (i === 5) {
-                <div class="boss-row" *ngFor="let boss of bosses().slice(1, 2)">
+                <div class="boss-row" *ngFor="let boss of bosses().slice(1, 2)" [style.background]="getBossGradient(boss)">
                   <div class="boss-info">
                     <div class="boss-trainer">
                       <div class="trainer-sprite">
@@ -264,7 +264,7 @@
 
               <!-- Boss Encounter After Route 117 -->
               @if (i === 8) {
-                <div class="boss-row" *ngFor="let boss of bosses().slice(2, 3)">
+                <div class="boss-row" *ngFor="let boss of bosses().slice(2, 3)" [style.background]="getBossGradient(boss)">
                   <div class="boss-info">
                     <div class="boss-trainer">
                       <div class="trainer-sprite">
@@ -300,7 +300,7 @@
 
           <!-- Boss Encounters Content -->
           <div *ngIf="sidebarTab() === 'bosses'" class="boss-encounters">
-            <div class="boss-row" *ngFor="let boss of bosses()">
+            <div class="boss-row" *ngFor="let boss of bosses()" [style.background]="getBossGradient(boss)">
               <div class="boss-info">
                 <div class="boss-trainer">
                   <div class="trainer-sprite">
